[gd_scene load_steps=14 format=3 uid="uid://c0fhho0dp1svt"]

[ext_resource type="Script" path="res://addons/ridiculous_coding/resources/effects/blip.gd" id="1_b2lxn"]
[ext_resource type="Texture2D" uid="uid://d1tio2ceqgm7m" path="res://addons/ridiculous_coding/images/blip.png" id="2_n5ksr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lhabj"]
atlas = ExtResource("2_n5ksr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcxxe"]
atlas = ExtResource("2_n5ksr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w7u8"]
atlas = ExtResource("2_n5ksr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo2pv"]
atlas = ExtResource("2_n5ksr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55mlh"]
atlas = ExtResource("2_n5ksr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eube"]
atlas = ExtResource("2_n5ksr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwwsh"]
atlas = ExtResource("2_n5ksr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gllt0"]
atlas = ExtResource("2_n5ksr")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g4ki7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhabj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcxxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w7u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo2pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55mlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eube")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gllt0")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="Animation" id="Animation_u2m4c"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlipSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8epm6"]
_data = {
"default": SubResource("Animation_u2m4c")
}

[node name="RcBlip" type="Node2D"]
script = ExtResource("1_b2lxn")

[node name="BlipSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 5
position = Vector2(-5, 4)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_g4ki7")
frame = 7
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8epm6")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
